aws-cloudformation/001_vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  Create a VPC with 2 Public Subnets and 2 Private Subnets.
  Public subnets have internet access via Internet Gateway.
  Private subnets access internet via NAT Gateway.
  All subnets are interconnected via routing.

Parameters:
  ProjectName:
    Type: String
    Default: focason-cloud
    Description: Project prefix used to name all resources

  VpcCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC

  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.1.0/24
    Description: For bastion, alb, nat gateway.
  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.2.0/24
    Description: For bastion, alb, nat gateway.
  PrivateSubnet1CIDR:
    Type: String
    Default: 10.0.3.0/24
    Description: For ecs services.
  PrivateSubnet2CIDR:
    Type: String
    Default: 10.0.4.0/24
    Description: For ecs services.
  PrivateSubnet3CIDR:
    Type: String
    Default: 10.0.5.0/24
    Description: For database.
  PrivateSubnet4CIDR:
    Type: String
    Default: 10.0.6.0/24
    Description: For database.

Resources:
  # -----------------------
  # VPC
  # -----------------------
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-vpc"

  # -----------------------
  # Internet Gateway
  # -----------------------
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-igw"

  # -----------------------
  # Connect Internet Gateway to VPC
  # -----------------------
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # -----------------------
  # Public Subnets
  # -----------------------
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-public-subnet-1"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-public-subnet-2"

  # -----------------------
  # Private Subnets
  # -----------------------
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-private-subnet-1"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-private-subnet-2"

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet3CIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-private-subnet-3"

  PrivateSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet4CIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-private-subnet-4"

  # -----------------------
  # NAT Gateway (for Private Subnets)
  # -----------------------
  NatEIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-ngw"

  # -----------------------
  # Public Route Table
  # -----------------------
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-public-rtb"

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  # -----------------------
  # Private Route Table
  # -----------------------
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-private-rtb"

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet3
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet4RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet4
      RouteTableId: !Ref PrivateRouteTable

  # -----------------------
  # S3 Gateway Endpoint
  # -----------------------
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref VPC
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref PrivateRouteTable

  # -------------------------------
  # Service Discovery Namespace (Private)
  # -------------------------------
  ServiceDiscoveryNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: !Sub "${ProjectName}.internal"
      Vpc: !Ref VPC
      Description: !Sub "Private DNS namespace for ${ProjectName}"
    DependsOn: VPC

  # -------------------------------------------------
  # ALB Security Groups
  # -------------------------------------------------
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP/HTTPS access from the Internet
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5672
          ToPort: 5672
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-alb-sg"

  # -------------------------------------------------
  # Gateway Security Groups
  # -------------------------------------------------
  GatewaySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ALB to Gateway (port 8080)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 15672
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-gateway-sg"

  # -------------------------------------------------
  # Bastion Security Groups
  # -------------------------------------------------
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH from specific IPs
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-bastion-sg"

  # -------------------------------------------------
  # Base Security Groups
  # -------------------------------------------------
  BaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Gateway to Base (port 80)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8761
          ToPort: 8761
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8888
          ToPort: 8888
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5672
          ToPort: 5672
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-base-sg"

  # -------------------------------------------------
  # Business Security Groups
  # -------------------------------------------------
  BusinessSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Gateway to Backend (ports 8080-8090)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 9000
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-business-sg"

  # -------------------------------------------------
  # MYSQL Security Groups
  # -------------------------------------------------
  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Backend to MySQL (port 3306)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-database-sg"

  # -------------------------------------------------
  # Gateway Target Group
  # -------------------------------------------------
  GatewayTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${ProjectName}-gateway-tg"
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: ip
      HealthCheckPath: "/actuator/health"
      HealthCheckProtocol: HTTP

  # -------------------------------------------------
  # Application Load Balancer
  # -------------------------------------------------
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${ProjectName}-alb"
      Scheme: internet-facing
      Type: application
      IpAddressType: ipv4
      Subnets: [!Ref PublicSubnet1, !Ref PublicSubnet2]
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-alb"

  # -------------------------------------------------
  # HTTPS Listener
  # -------------------------------------------------
  ALBListenerHTTPS:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: arn:aws:acm:ap-northeast-1:442426889980:certificate/8b199528-8275-4449-8e80-f012b37af907
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref GatewayTargetGroup

  # -------------------------------------------------
  # HTTP Listener
  # -------------------------------------------------
  ALBListenerHTTP:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            Protocol: HTTPS
            Port: "443"
            StatusCode: HTTP_301

  # -------------------------------------------------
  # HTTP Gateway Rule
  # -------------------------------------------------
  ALBListenerRuleGateway:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref ALBListenerHTTP
      Priority: 1
      Conditions:
        - Field: path-pattern
          Values: ["/"]
      Actions:
        - Type: forward
          TargetGroupArn: !Ref GatewayTargetGroup

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: !Sub "${ProjectName}-vpc-id"

  PrivateDnsNamespaceId:
    Description: Private DNS Namespace ID
    Value: !Ref ServiceDiscoveryNamespace
    Export:
      Name: !Sub "${ProjectName}-servicediscovery-namespace-id"

  PublicSubnets:
    Description: Public Subnet IDs
    Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]
    Export:
      Name: !Sub "${ProjectName}-public-subnets"

  PublicSubnet1:
    Description: Public Subnet ID 1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${ProjectName}-public-subnet-1"

  PublicSubnet2:
    Description: Public Subnet ID 2
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${ProjectName}-public-subnet-2"

  ECSPrivateSubnets:
    Description: Private Subnet IDs
    Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
    Export:
      Name: !Sub "${ProjectName}-ecs-private-subnets"

  DBPrivateSubnets:
    Description: Private Subnet IDs
    Value: !Join [",", [!Ref PrivateSubnet3, !Ref PrivateSubnet4]]
    Export:
      Name: !Sub "${ProjectName}-db-private-subnets"

  DBPrivateSubnet3:
    Description: Private Subnet3 ID
    Value: !Ref PrivateSubnet3
    Export:
      Name: !Sub "${ProjectName}-db-private-subnet-3"

  DBPrivateSubnet4:
    Description: Private Subnet4 ID
    Value: !Ref PrivateSubnet4
    Export:
      Name: !Sub "${ProjectName}-db-private-subnet-4"

  InternetGatewayId:
    Description: Internet Gateway ID
    Value: !Ref InternetGateway
    Export:
      Name: !Sub "${ProjectName}-igw"

  NatGatewayId:
    Description: NAT Gateway ID
    Value: !Ref NatGateway
    Export:
      Name: !Sub "${ProjectName}-ngw"

  S3EndpointId:
    Description: S3 Endpoint ID
    Value: !Ref S3Endpoint
    Export:
      Name: !Sub "${ProjectName}-s3-endpoint"

  ALBArn:
    Description: Application Load Balancer ARN
    Value: !Ref ApplicationLoadBalancer
    Export:
      Name: !Sub "${ProjectName}-alb"

  ALBListenerArn:
    Description: HTTP Listener ARN
    Value: !Ref ALBListenerHTTP
    Export:
      Name: !Sub "${ProjectName}-alb-arn"

  ALBUrl:
    Description: Public DNS name for ALB
    Value: !GetAtt ApplicationLoadBalancer.DNSName
    Export:
      Name: !Sub "${ProjectName}-alb-url"

  GatewayTargetGroupArn:
    Description: Target Group ARN for Gateway Service
    Value: !Ref GatewayTargetGroup
    Export:
      Name: !Sub "${ProjectName}-gateway-tg"

  ALBSecurityGroupId:
    Description: Security Group ID for ALB
    Value: !Ref ALBSecurityGroup
    Export:
      Name: !Sub "${ProjectName}-alb-sg"

  BastionSecurityGroupId:
    Description: Security Group ID for Bastion
    Value: !Ref BastionSecurityGroup
    Export:
      Name: !Sub "${ProjectName}-bastion-sg"

  BaseSecurityGroupId:
    Description: Security Group ID for Base
    Value: !Ref BaseSecurityGroup
    Export:
      Name: !Sub "${ProjectName}-base-sg"

  GatewaySecurityGroupId:
    Description: Security Group ID for Gateway
    Value: !Ref GatewaySecurityGroup
    Export:
      Name: !Sub "${ProjectName}-gateway-sg"

  BusinessSecurityGroupId:
    Description: Security Group ID for Business
    Value: !Ref BusinessSecurityGroup
    Export:
      Name: !Sub "${ProjectName}-business-sg"

  DatabaseSecurityGroupId:
    Description: Security Group ID for MySQL
    Value: !Ref DatabaseSecurityGroup
    Export:
      Name: !Sub "${ProjectName}-database-sg"
